[package]
name = "lldb"
version = "0.0.0"
authors = ["Ivor Wanders <ivor@iwanders.net>"]
edition = "2021"
# Not too sure on the license, llvm itself is Apache-2.0 with exceptions, not sure if this can be
# Apache-2.0 without exceptions.
license = "Apache-2.0"
build = "build.rs"

[dependencies]
autocxx = "0.22.0"
cxx = "1.0"

[build-dependencies]
bindgen = "0.59.2"
cc = "1.0.73"
autocxx-build = "0.22.0"
miette = { version="4.3", features=["fancy"] } # optional but gives

[lib]
doctest = false

